Bug 784763 - freeBytes in stat() result is wrong. r=sicking